# osx-profiles

./: README.md  pyproject.toml
.cookiecutter/: cookiecutter.json
.github/workflows/: push.yml
profile/: .ansible-lint  install.yml  requirements.yml
profile/__precheck__/: env.yml  notes.txt
profile/handlers/: main.yml
profile/tasks/: post_install.yml  pre_install.yml
profile/tasks/post_install/: audio_partition.yml  dock_content.yml  ethernet.yml  fstab.yml  mas.yml  preferences.yml  shell.yml
profile/tasks/pre_install/: compatibility.yml
profile/vars/: asdf.yml  brew.yml  compatibility.yml  dock.yml  downloader.yml  ethernet.yml  external_disk.yml  fstab.yml  homeshick.yml  mas.yml  preferences.yml  python.yml  symlinks.yml
