[tool.poetry]
authors = ["Niall Byrne <niall@niallbyrne.ca>"]
description = "My OSX machine profiles."
name = "osx-profiles"
version = "0.0.1"

[tool.poetry.dependencies]
python = ">=3.6.1,<4.0"

[tool.poetry.dev-dependencies]
ansible = "^4.1.0"
ansible-lint = "^5.0.8"
commitizen = "^2.17.6"
yamllint = "^1.26.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
